# pixel-space-sim

./: Cargo.toml  README.md
app/: Cargo.toml
app/src/: app.rs  camera.rs  gfx.rs  main.rs  ui.rs
app/src/ui/: widgets.rs  windows.rs
app/src/ui/widgets/: enum_select.rs  option_enum_select.rs  toggle_button.rs
app/src/ui/windows/: debug.rs  draw.rs  main.rs
core/: Cargo.toml
core/src/: lib.rs  math.rs  simulation.rs
core/src/math/: area.rs  circle.rs  eclipse.rs  ema.rs  point.rs  rect.rs  rgba.rs  screen_coords.rs  size.rs  world_coords.rs
core/src/simulation/: command.rs  event.rs  frame.rs  frame_buffer.rs  procedural.rs  settings.rs  snapshot.rs  source.rs  state.rs  sync.rs
core/src/simulation/procedural/: asteroid_shape.rs  hash.rs
core/src/simulation/source/: local.rs
core/src/simulation/source/local/: context.rs
core/src/simulation/state/: colony.rs  resource.rs  resource_bag.rs  settings.rs
core/src/simulation/sync/: command.rs  snapshot.rs
