[package]
name = "pss-app"
version = "0.1.0"
edition = "2024"

[dependencies]
pss-core = { workspace = true }
bytemuck = "1.24.0"
egui = "0.33.3"
egui-phosphor = "0.11.0"
egui-wgpu = "0.33.3"
egui-winit = "0.33.3"
pollster = "0.4.0"
strum = { workspace = true }
strum_macros = { workspace = true }
winit = "0.30.12"